Modified the site as per my protfolio

--- a/.eslintrc
+++ b/.eslintrc
@@ -29,7 +29,8 @@
       "declaration": true,
       "assignment": true,
       "return": true
-    }]
+    }],
+    "linebreak-style": ["error", "windows"]
   },
   "plugins": [
     "react"
