Fixing line break for heroku deploy

--- a/.eslintrc
+++ b/.eslintrc
@@ -29,8 +29,8 @@
       "declaration": true,
       "assignment": true,
       "return": true
-    }],
-    "linebreak-style": ["error", "windows"]
+    }]
+    //"linebreak-style": ["error", "windows"]
   },
   "plugins": [
     "react"
